# tauri-theia

./: .gitignore  DEPENDENTS.md  LICENSE  README.md  move-binaries.js  package.json
Documentation/: index.html  modules.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/Source/: build.rs  cmd.rs  main.rs
