[[bin]]
name = "theia"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tauri = { version = "0.5", features = ["all-api", "edge"] }

[features]
embedded-server = ["tauri/embedded-server"]
no-server = ["tauri/no-server"]

[package]
authors = ["you"]
build = "src/build.rs"
default-run = "theia"
description = "Tauri Flavor of the Theia IDE"
edition = "2018"
license-file = "LICENSE"
name = "theia"
repository = ""
version = "0.1.0"

[profile]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"

[target]

[target."cfg(windows)"]

[target."cfg(windows)".build-dependencies]
winres = { version = "0.1" }
